## Process this with automake to create Makefile.in

AUTOMAKE_OPTIONS = foreign

# These Java sources are not built or used when using configure+make, only
# when using Ant - but they still should go into the distribution tar file.
SOURCES = LineStripperSet.java  XCopy.java
EXTRA_DIST = Makefile.am

all:
